@@ -372,7 +372,7 @@ apache_get_username ()
 
 #ifndef APACHE13
 static void
-ensure_dashboard_initialized (module_cfg *config, xsp_data *xsp, apr_pool_t *p)
+ensure_dashboard_initialized (module_cfg *config, xsp_data *xsp, apr_pool_t *p, int is_global)
 {
 	apr_status_t rv;
 	mode_t old_umask;
@@ -441,9 +441,10 @@ ensure_dashboard_initialized (module_cfg *config, xsp_data *xsp, apr_pool_t *p)
 		} else {
 			DEBUG_PRINT (1, "removing dashboard file '%s'", xsp->dashboard_file);
 			if (unlink (xsp->dashboard_file) == -1 && errno != ENOENT) {
-				ap_log_error (APLOG_MARK, APLOG_CRIT, STATCODE_AND_SERVER (rv),
-				      "Failed to attach to existing dashboard, and removing dashboard file '%s' failed (%s). Further action impossible.",
-				      xsp->dashboard_file, strerror (errno));
+				if (!is_global)
+					ap_log_error (APLOG_MARK, APLOG_CRIT, STATCODE_AND_SERVER (rv),
+						      "Failed to attach to existing dashboard, and removing dashboard file '%s' failed (%s). Further action impossible.",
+						      xsp->dashboard_file, strerror (errno));
 				goto restore_creds;
 			}
 	
@@ -560,7 +561,7 @@ add_xsp_server (apr_pool_t *pool, const char *alias, module_cfg *config, int is_
 	server->restart_requests = 0;
 	server->restart_time = 0;
 
-	ensure_dashboard_initialized (config, server, pool);
+	ensure_dashboard_initialized (config, server, pool, alias == NULL);
 #endif
 	
 	nservers = config->nservers + 1;
@@ -2184,6 +2185,7 @@ mono_execute_request (request_rec *r, char auto_app)
 	int start_wait_time;
 	char *socket_name = NULL;
 	int retrying, was_starting;
+	int is_global = 0;
 
 	config = ap_get_module_config (r->server->module_config, &mono_module);
 	DEBUG_PRINT (2, "config = 0x%p", config);
@@ -2200,8 +2202,10 @@ mono_execute_request (request_rec *r, char auto_app)
 	
 	if (idx < 0) {
 		DEBUG_PRINT (2, "Alias not found. Checking for auto-applications.");
-		if (config->auto_app)
+		if (config->auto_app) {
 			idx = search_for_alias ("XXGLOBAL", config);
+			is_global = 1;
+		}
 
 		if (idx == -1) {
 			DEBUG_PRINT (2, "Global config not found. Finishing request.");
@@ -2227,7 +2231,7 @@ mono_execute_request (request_rec *r, char auto_app)
 		start_wait_time = 2;
 
 #ifndef APACHE13
-	ensure_dashboard_initialized (config, conf, pconf);
+	ensure_dashboard_initialized (config, conf, pconf, is_global);
 	if (conf->dashboard_mutex && !conf->dashboard_mutex_initialized_in_child) {
 		/* Avoiding to call apr_global_mutex_child_init is a hack since in certain
 		 * conditions it may lead to apache deadlock. Since we don't know the exact cause
@@ -2389,7 +2393,7 @@ mono_execute_request (request_rec *r, char auto_app)
 		
 		DEBUG_PRINT (2, "Auto-restart enabled for '%s', checking if restart required", conf->alias);
 
-		ensure_dashboard_initialized (config, conf, pconf);
+		ensure_dashboard_initialized (config, conf, pconf, is_global);
 		if (!conf->dashboard_mutex || !conf->dashboard)
 			return status;
 
@@ -2780,7 +2784,7 @@ mono_control_panel_handler (request_rec *r)
 			request_send_response_string(r, buffer);
 
 #ifndef APACHE13
-			ensure_dashboard_initialized (config, xsp, pconf);
+			ensure_dashboard_initialized (config, xsp, pconf, 0);
 			if (xsp->dashboard_mutex && xsp->dashboard
 				&& apr_global_mutex_lock (xsp->dashboard_mutex) == APR_SUCCESS) {
 
